# Actividad-1.3-Control-de-robot-por-retroalimentacion-visual

./: act1_3.ttt
IBVS/act1_3/: setup.cfg  setup.py
IBVS/act1_3/act1_3/: teleop.py
IBVS/act1_3/config/: params.yaml
PBVS/act1_3/act1_3/: movement.py
PBVS/act1_3/config/: params.yaml
act1_3/: package.xml
act1_3/act1_3/: movement.py  sphere.py
act1_3/config/: params.yaml
act1_3/launch/: launch.py
